syntax = "proto2";

import public "common_client.proto";

package ddproto;
option optimize_for = LITE_RUNTIME;

enum ddz_enum_protoId {

    ////////////////////////////////////
    //
   DDZ_PID_HEARTBEAT = 0; //心跳
   DDZ_PID_QUICK_CONN = 1; //连接服务器
   DDZ_PID_QUICK_CONN_ACK = 2; //
   DDZ_PID_GAME_LOGIN = 3; //登录游戏
   DDZ_PID_GAME_LOGIN_ACK = 4; //
   DDZ_PID_CREATEROOM = 5; //创建房间
   DDZ_PID_CREATEROOM_ACK = 6; //创建房间-回复
   DDZ_PID_ENTER_ROOM = 7; //进入房间
   DDZ_PID_ENTER_ROOM_ACK = 8; //进入房间-回复
   DDZ_PID_SEND_GAMEINFO = 9; //游戏信息
   DDZ_PID_READY = 10; //准备
   DDZ_PID_READY_ACK = 11; //准备-ack
   DDZ_PID_OPENING = 12; //开局
   DDZ_PID_DEAL_CARDS = 13; //发牌

   DDZ_PID_JIAO_DIZHU = 14; //叫地主
   DDZ_PID_JIAO_DIZHU_ACK = 15; //叫地主-ack

    ////////////////////////////////////////////
    //欢乐斗地主
   DDZ_PID_ROB_DIZHU = 16; //抢地主
   DDZ_PID_ROB_DIZHU_ACK = 17; //抢地主-ack
   DDZ_PID_DOUBLE = 18; //加倍
   DDZ_PID_DOUBLE_ACK = 19; //加倍-ack

   DDZ_PID_SHOW_HANDPOKERS = 20; //明牌
   DDZ_PID_SHOW_HANDPOKERS_ACK = 21; //明牌-ack

    ////////////////////////////////////////////
    //四川斗地主
   DDZ_PID_MEN_ZHUA = 22; //闷抓
   DDZ_PID_MEN_ZHUA_ACK = 23; //闷抓-ack
   DDZ_PID_SEE_CARDS = 24; //看牌
   DDZ_PID_SEE_CARDS_ACK = 25; //看牌-ack
   DDZ_PID_PULL = 26; //拉/倒
   DDZ_PID_PULL_ACK = 27; //拉/倒-ack

    ////////////////////////////////////////////
   DDZ_PID_OUT_CARDS = 28; //出牌
   DDZ_PID_OUT_CARDS_ACK = 29; //出牌-ack
   DDZ_PID_ACT_GUO = 30; //过
   DDZ_PID_ACT_GUO_ACK = 31; //过-ack

    ////////////////////////////////////////////
   DDZ_PID_START_PLAY = 32; //开始打牌阶段

   DDZ_PID_OVERTURN = 33; //轮到下一人操作(广播)

   DDZ_PID_CURRENTRESULT = 34; //本局结果
   DDZ_PID_SENDENDLOTTERY = 35; //牌局结束

    ////////////////////////////////////////////
   DDZ_PID_DISSOLVE_DESK = 36; //离开房间
   DDZ_PID_DISSOLVE_DESK_ACK = 37; //
   DDZ_PID_LEAVE_DESK = 38; //解散房间
   DDZ_PID_LEAVE_DESK_ACK = 39; //

   DDZ_PID_MESSAGE = 40; //聊天信息
   DDZ_PID_SEND_MESSAGE = 41; //广播聊天

   DDZ_PID_GAME_GAMERECORD = 42; //查询战绩
   DDZ_PID_GAME_GAMERECORD_ACK = 43; //战绩回复
}

enum ddz_enum_errorCode {
    EC_SUCCESS = 0; //表示成功

    //-1   -100 登陆异常

    //-101   -200	游戏异常
    EC_CREATE_DESK_DIAMOND_NOTENOUGH = -101; // 创建房间的时候余额不足
    EC_CREATE_DESK_USER_NOTFOUND = -102; // 创建房间的时候未知用户

    EC_INTO_DESK_NOTFOUND = -103; // 进入房间时:没有找到房间
    EC_INTO_DESK_ISFULL = -104; // 进入房间时:房间人数已满

    EC_GAME_READY_REPEAT = -110; // 重复准备
    EC_GAME_READY_CHIP_NOT_ENOUGH = -111; // 筹码不足
}

///////////////////////////////////////////////////

//牌型
enum ddz_enum_paiType {
    ERRORCARD = 0; //错误牌型
    SINGLECARD = 1; //单牌
    DOUBLECARD = 2; //对子
    THREECARD = 3; //三不带
    BOMBCARD = 4; //炸弹
    THREEONECARD = 5; //三带1
    THREETWOCARD = 6; //三带二
    BOMBTWOCARD = 7; //四带两个单张
    BOMBTWOOOCARD = 8; //四带两个对子
    CONNECTCARD = 9; //链子
    COMPANYCARD = 10; //连队
    AIRCRAFTCARD = 11; //飞机不带牌
    AIRCRAFTSINGLECARD = 12; //飞机带单牌
    AIRCRAFTDOUBLECARD = 13; //飞机带对子
    SUPERBOMB = 14; //   王炸
    FOURWITHONEDOUBLE = 15; //四个带一对
}

// 轮到玩家操作时：可执行何种操作
enum ddz_enum_actType {
    T_NORMAL_ACT = 1; // 普通出牌
    T_JIAO_DIZHU = 2; // 叫地主
    T_ROB_DIZHU = 3; // 抢地主
    T_DOUBLE = 4; // 加倍
    T_MEN_ZHUA = 5; // 闷抓/看牌
    T_PULL = 6; // 拉
    T_PUSH = 7; // 倒
}


enum ddz_enum_gameStatus {
    U_INIT = 0; //初始化
    U_JIAO_DIZHU = 1; //叫地主
    U_ROB_DIZHU = 2; //抢地主
    U_PLAYING = 3; //游戏中
    U_FINISH = 4; //已经结束
}

// 玩家当前状态
enum ddz_enum_playerGameStatus {
    S_INIT = 0; // 初始状态
    S_DEALCARDS = 1; // 发牌中
    S_JIAO_DIZHU = 2; // 叫地主
    S_ROB_DIZHU = 3; // 抢地主
    S_DOUBLE = 4; // 加倍
    S_NO_DOUBLE = 5; // 不加倍
    S_PULL = 6; // 拉
    S_PUSH = 7; // 倒

    S_ACTING = 8; // 出牌中..
    S_WAIT = 9; // 等待别人出牌

    S_GAME_END = 10; // 游戏结束
}

enum ddz_enum_roomType {
    T_NORMAL_DDZ = 1; // 经典斗地主
    T_HAPPY_DDZ = 2; // 欢乐斗地主
    T_SICHUAN_DDZ = 3; // 四川斗地主
}


message ddz_base_roomTypeInfo {
    optional ddz_enum_roomType roomType = 1; // 房间类型：经典斗地主/欢乐斗地主/四川斗地主
    optional int32 boardsCount = 2; // 局数，如：4局（房卡 × 2）、8局（房卡 × 3）
    optional int64 capMax = 3; // 封顶，如：2炸、3炸、4炸、5炸
    optional int64 baseValue = 4; // 底分
    optional bool isJiaoFen = 5; // 是否叫分（1分、2分、3分）
}

message ddz_base_playerInfo {
    optional bool isDiZhu = 1; // 是否地主
    repeated client_base_poker playerPokers = 2; // 玩家的手牌
    optional int64 coin = 3; // 玩家当前显示的自己的筹码数
    optional string nickName = 4; // 昵称
    optional int32 sex = 5; // 性别: 1=男  2=女
    optional uint32 userId = 6; // 用户id
    optional bool isOwner = 7; // 当前用户是否房主
    optional int32 bReady = 8; // 是否已准备
    optional ddz_enum_playerGameStatus status = 9; // 玩家当前状态
    optional WeixinInfo wxInfo = 10; // 微信用户信息( 进入房间时、广播新进用户时，才需返回WeixinInfo；其它广播不需要。)
    optional int32 onlineStatus = 11; //玩家在线状态: 1=在线  2=离线 3=在线托管 4=离线托管
    optional int32 playRate = 12; //玩家倍数
    optional int32 remainPaiCount = 13; //玩家当前牌数
    repeated client_base_poker outPais = 14; //玩家出的牌
}

enum ddz_enum_deskGameStatus {
    INIT = 0; //初始化
    DEAL_CARDS = 1; //发牌阶段
    JIAO_DIZHU = 2; //叫地主(抢地主、拉/倒)
    PLAYING = 3; //游戏中
    FINISH = 4; //已经结束
}

message ddz_base_deskInfo {
    optional int32 GameStatus = 1; //游戏所处状态: 0:INIT 1:DINGQUE 2;EXCHANGE 3:PLAYING 4:FINISH
    optional ddz_base_roomTypeInfo roomTypeInfo = 2; //房间类型信息，包括：房间类型、局数、封顶、玩法、牌张、结算、底
    optional int32 playerNum = 3; //玩家数量
    optional uint32 activeUserId = 4; //当前谁操作，决定：中间的指针应该指向谁，哪个玩家当前是可操作状态
    optional int32 actionTime = 5; // 玩家当前操作时间

    optional int32 nInitActionTime = 7; // 初始操作时间
    optional int64 initRoomCoin = 9; // 房间的初始带入金额
    optional int32 currPlayCount = 10; // 朋友桌: 当前第几局
    optional int32 totalPlayCount = 11; // 朋友桌: 总共几局
    optional string roomNumber = 12; // 房间号

    optional uint32 diZhuUserId = 14; //地主

    repeated client_base_poker footPokers = 15; // 底牌（3张）
    optional int32 footRate = 16; // 底牌倍率

    optional int32 playRate = 17; // 当前倍数（抢地主、炸弹、春天等产生的倍数） ?不明
}

